# dicentra

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  gitattributes  gitignore  index.html  main.py  mkdocs.yml  pre-commit-config.yaml  project_structure.txt  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
api/image_processing/: index.html
api/loaders/: index.html
app/data/: dicom_model.py
app/gui/: colormap_bar.py  export_dialog.py  histogram_panel.py  image_tab.py  main_window.py  metadata_tab.py  ruler_canvas.py  series_browser.py  stylesheet.py  threed_tab.py  widgets.py  wl_panel.py
app/logic/: colormap.py  controller.py  export_utils.py  image_processor.py
app/utils/: logger.py
architecture/: index.html
config/: settings.py
docs/: architecture.md  index.md  installation.md  quickstart.md  usage.md
docs/api/: image_processing.md  loaders.md
docs/stylesheets/: extra.css
examples/: apply_window_level.py  load_dicom_file.py  load_dicom_series.py
installation/: index.html
quickstart/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_dicom_model.py  test_image_processor.py  test_new_features.py
usage/: index.html
