[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dicentra"
version = "2.0.0"
description = "A modern, modular DICOM viewer for clinical imaging workflows"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kareem", email = "" }]
keywords = ["DICOM", "medical imaging", "radiology", "PyQt5", "viewer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.9"
dependencies = [
    "pydicom>=2.4.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "PyQt5>=5.15.0",
    "matplotlib>=3.7.0",
    "Pillow>=9.0.0",
    "imageio>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/Kareem-Taha-05/dicentra"
Repository = "https://github.com/Kareem-Taha-05/dicentra"
"Bug Tracker" = "https://github.com/Kareem-Taha-05/dicentra/issues"

[project.scripts]
dicentra = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = ["E501"]
